<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chan.revernue.filterapplication.CustomerActivity">

    <android.support.v7.widget.Toolbar
        android:padding="10dp"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--back-->
            <ImageView
                android:id="@+id/imvBack"
                android:src="@drawable/ic_back1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView

                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:text="Add Equipment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout

        android:id="@+id/linTopCrateAccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="100dp"
        android:background="#528dff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipment_brand"
                android:textSize="18sp"
                android:textColor="#000000"/>
            <EditText
                android:inputType="text"
                android:id="@+id/txtEquipment"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="ยี่ห้ออะไหล่" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/generation"
                android:textSize="18sp"
                android:textColor="#000000"/>
            <EditText
                android:inputType="text"
                android:id="@+id/edtGeneration"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="รุ่น" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textSize="18sp"
                android:textColor="#000000"/>
            <EditText
                android:inputType="text"
                android:id="@+id/edtSize"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="ขนาด" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="18sp"
                android:textColor="#000000"/>
            <EditText
                android:inputType="text"
                android:id="@+id/edtCategory"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="ประเภท" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/set_date"-->
                <!--android:textSize="18sp"-->
                <!--android:textColor="#000000"/>-->
            <!--<EditText-->
                <!--android:inputType="text"-->
                <!--android:id="@+id/edtSetData"-->
                <!--android:layout_marginLeft="5dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:gravity="center"-->
                <!--android:hint="วันที่เตือนเปลี่ยนอะไหล่" />-->
            <ImageView
                android:id="@+id/imageViewAge"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:padding="4dp"
                android:src="@drawable/ic_launcher_birth" />

            <EditText
                android:id="@+id/etAge"
                android:layout_width="220dp"
                android:layout_height="35dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/item_edittext"
                android:ems="10"
                android:gravity="center"
                android:hint="วัน-เดือน-ปีเกิด"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning_date"
                android:textSize="18sp"
                android:textColor="#000000"/>
            <EditText
                android:inputType="text"
                android:id="@+id/edtWarning"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="วันที่เตือนล่วงหน้า" />
        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/install_date"
                android:textSize="18sp"
                android:textColor="#000000"/>
            <EditText
                android:inputType="text"
                android:id="@+id/edtInstall"
                android:layout_marginLeft="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="วันที่ติดตั้ง" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnEquipment"
                android:onClick="onClickbtnEquipment"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:text="Continue"
                android:textColor="#ffffff"
                />
                />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
